--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -74,6 +74,11 @@
 			<version>1.6.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 
 
 	</dependencies>
