--- a/Quarkus/voltando/pom.xml
+++ b/Quarkus/voltando/pom.xml
@@ -68,6 +68,10 @@
           <version>1.18.22</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
