--- a/Quarkus/api-bndes/src/main/resources/application.properties
+++ b/Quarkus/api-bndes/src/main/resources/application.properties
@@ -2,9 +2,13 @@
 api-bndes/mp-rest/url=https://apis-gateway-h.bndes.gov.br/fg2/v1/honra/
 
 
+
+teste.contentType=${CONTENT_TYPE}
+teste.authorization==${AUTHORIZATION}
+
 #autorização e content type da nossa aplicacao
-content-type=${CONTENT_TYPE}
-authorization=${AUTHORIZATION}  
+#content-type=${CONTENT_TYPE}
+#authorization=${AUTHORIZATION}
 
 
 
